@@ -364,14 +364,6 @@ PLF_LowerCase=Pennant Loan Factory
 label_LoginDialog_user.value=User Name
 label_LoginDialog_pwd.value=Password
 
-
-#Password instructions
-label_LoginDialog_Error.value={
-Login Failed, Due to invalid credentials/User ID Locked/Expired.
-
-Please try again or contact system administrator.
-}
-
 #
 # General Errors
 #
@@ -7310,16 +7302,6 @@ label_TransactionCodeDialog_TranIsActive.value = Active
 
 message_invalid_Login=You Are Not Valid User to Login to this Application.
 
-#Password instructions
-message.password_instructions={
-* The password cannot consist of any three sequence letters  are in your Username.
-For e.g.If your Username is 'Bobby', then your password cannot be 'Bob'.
-* Password should mandatorily contain small letters ,Capital letters,special characters(Atleast one from !@#$%^&*_-) and numbers .
-For e.g. asAS12!@
-* Spaces are not allowed in between Password.
-* The Password should contain a minimum of 8 characters  and maximum of 15 characters .
-* Your new password cannot be same as any of your previous 5 passwords.
-}
 #
 # Pennant Loan System - What If Loan Main Detail
 #
@@ -7514,11 +7496,6 @@ label_FinanceMainDialog_ODFinAssetValue.value = Overdraft Limit
 label_FinanceMainDialog_InterestServicingODLimit.value = Auto Interest Receipt From OD Limit?
 label_FinanceMainDialog_ODRepayFrq.value = 	Interest Service Frequency
 label_FinanceMainDialog_ODRepayRvwFrq.value = Rate Review Frequency
-
-regenSchedule.warning = {
-Existing Schedule going to be changed.
-Do you want to proceed ?
-}
 
 #
 # Pennant Loan System - Loan Disbursement Details
@@ -9843,57 +9820,7 @@ label_WhereConditonConstant_&USERLOGIN=&USERLOGIN
 label_WhereConditonConstant_&ROLES=&ROLES
 message.dashboard_instructions.title=General Instructions
 message.dashboard_instructions_DrillDown.title=Drill Down Chart Instructions
-#DashBoard instructions
-message.dashboard_instructions={
-* If Report is Single series then Retrive data as  labels and values
-
-For e.g. Select empName as label,salary as value from salary
-
-* If Report is Multi series then Retrive data as catogeries ,Series and values
-
-For e.g.  select LoanYear as catogery,Qudarent as series,Interest as value from Interests
-
-* If Want to add more styles and attributes for Report add  Fusion chart attributes in Remarks Filed
-
-
-* If parameters suplied for where condition having dynamic values like login user roles ,Login user Id
-use below values
-*   -------------------------Dyanamic where Condition Costants-------------------
-
-* &ROLES  --> It replaces with " ('role1','role2',...) ".Here Role1,Role2 are login user roles
-
-For e.g select empName as label,salary as value from salary where rolecode in &ROLES
-
-* &USERLOGIN --> It replaces with Login userLogin .like James_S059
-}
-message.dashboard_DrillDown_instructions={
-
-* Query :
-
-1)Query Field must contains Minimum 2 and Maximum 4   select queries  Separated by symbol  ||
-
-2)The First Query Refers as parent for second  query and Second Query Refers as Parent to Third Query and so on.
-
-3)Except the First query all other child queries must select parent query's label as reference(For link the relation).
-
-E.g  select DeptName as label ,Count(*) from Empolyee group by DeptName   ||
-
-select EmpName as label  ,Salary as value, DeptName as reference from Empolyee ||
-
-select  BenifitName as label,BenifitAmount as value, EmpName as reference from EMPBenifits
-
-* Remarks:
-
-1)Remarks for Each Chart must separated by symbol ||
-
-|| ...so on
-
-}
-
-
-
 # Payment Details
-
 
 label_Payment=Payment
 label_Balance=Balance
@@ -10819,48 +10746,6 @@ label_ReportFilterFieldsDialog_ListShow.value = List Show
 label_ReportFilterFieldsDialog_DBFields.value = DB Field
 label_ReportFilterFieldsDialog_TableFields.value = Table Field
 btnPreviewReportView.tooltiptext =Preview Report View
-instruction.ReportFilter.Textbox={
-* 'Field Constraint' is regix .It is must to avoid injection problems .
-* 'Field ErrorMessage' is error message to show when regix fails.
-*  Regix must follow single \ pattern .Eg: ^\+[0-9\s]+"
-}
-instruction.ReportFilter.LovSearch={
-* 'Module Name'  is PennaJavaUtil Class module names from which table we have to show List of values.
-* 'Value Get Method' is getMethod for hidden TextBox value.
-* 'Value Label Method' is getMethod for Label TextBox value.
-}
-instruction.ReportFilter.StaticList={
-* This StaticList Type renders a ComboBox with value labels.
-* 'AppUtil Method Name' is PennantAppUtilMethod,java method name which returns value,Labels to render ComboBox.
-}
-instruction.ReportFilter.DynamicList={
-* This DynamicList Type renders a ComboBox with value labels witch comes from table.
-* 'Module Name'  is PennaJavaUtil Class module names from which table we have to show List of values.
-* 'Value Get Method' is getMethod for ComboBox Value.
-* 'Value Label Method' is getMethod for ComboBox Label.
-}
-instruction.ReportFilter.MultiSelAndList={
-* This is useful in use single component for different status.
-* This Multi Select(With And Condition) Type renders a BandBox with multi select check boxes values.
-* 'AppUtil Method Name' is PennantAppUtilMethod.java method name which returns dbFieldName,value,Labels to render BandBox.
-Eg :To Select differnt User Status from one component.PennantAppUtil Method must follw below.
-public static ArrayList<ValueLabel> getUserStatusList() {
-reportNames.add(new ValueLabel("usrEnabled","1","User Enabled "));
-reportNames.add(new ValueLabel("usrAcExp","1","User Expired "));
-reportNames.add(new ValueLabel("usrIsMultiBranch","1","Multi Branch"));
-reportNames.add(new ValueLabel("usrCanOverrideLimits","1","Over Ride Limits"));
-return reportNames;
-}
-
-instruction.ReportFilter.MultiSelInList={
-* This Multi Select(With In Condition) Type renders a BandBox with multi select check boxes values .
-* This will form a In condition for all Selected values. Eg . RecordType in ('NEW','Edit','Delete')
-* 'AppUtil Method Name' is PennantAppUtilMethod.java method name which returns value,Labels to render BandBox.
-}
-instruction.ReportFilter.StaticValue={
-* This is for hidden values with no filter to display .like our report always select Active records only.
-* As it appends in query must follow sql rules
-}
 
 labels_DownLoadSuccess.value=Record Processed  Successfully
 labels_ProcessCompleted.value=Process Completed  Successfully
