@@ -8,20 +8,38 @@
 		<groupbox mold="3d" height="50%">
 			<caption label="${c:l('message.dashboard_instructions.title')}"
 				style="color:#FF6600" />
-			<textbox rows="8" multiline="true" width="99.5%"
-				height="300px" readonly="true" draggable="false"
-				style="font-family: verdana; border: none; background-color: white; overfolw:scroll;"
-				value="${c:l('message.dashboard_instructions')} ">
-			</textbox>
-		</groupbox>
-		<groupbox mold="3d" open="false" height="50%">
+			<html sclass="z-label" style="color:#555">
+				<![CDATA[
+		   <pre>
+If Report is Single series then Retrive data as  labels and values</br>
+For e.g. Select empName as label,salary as value from salary</br>
+* If Report is Multi series then Retrive data as catogeries ,Series and values</br>
+For e.g.  select LoanYear as catogery,Qudarent as series,Interest as value from Interests</br>
+* If Want to add more styles and attributes for Report add  Fusion chart attributes in Remarks Filed</br>
+* If parameters suplied for where condition having dynamic values like login user roles ,Login user Id</br>
+use below values</br>
+*   -------------------------Dyanamic where Condition Costants-------------------</br>
+* &ROLES  --> It replaces with " ('role1','role2',...) ".Here Role1,Role2 are login user roles</br>
+  For e.g select empName as label,salary as value from salary where rolecode in &ROLES</br>
+* &USERLOGIN --> It replaces with Login userLogin .like James_S059</pre>  ]]>
+				 </html>
+      </groupbox>
+		<groupbox mold="3d" open="true" height="230px" contentStyle="overflow:auto;">
 			<caption label="${c:l('message.dashboard_instructions_DrillDown.title')}"
 				style="color:#FF6600" />
-			<textbox rows="8" multiline="true" width="99.5%"
-				height="300px" readonly="true" draggable="false"
-				style="font-family: verdana; border: none; background-color: white; overfolw:scroll;"
-				value="${c:l('message.dashboard_DrillDown_instructions')} ">
-			</textbox>
+			<html sclass="z-label" style="color:#555">
+				<![CDATA[<pre>
+* Query :<br/>
+1)Query Field must contains Minimum 2 and Maximum 4 select queries  Separated by symbol  ||<br/>
+2)The First Query Refers as parent for second  query and Second Query Refers as Parent to Third Query and so on.<br/>
+3)Except the First query all other child queries must select parent queries label as reference(For link the relation).<br/>
+E.g  select DeptName as label ,Count(*) from Empolyee group by DeptName   ||<br/>
+select EmpName as label  ,Salary as value, DeptName as reference from Empolyee ||<br/>
+select  BenifitName as label,BenifitAmount as value, EmpName as reference from EMPBenifits<br/>
+* Remarks:<br/>
+4)Remarks for Each Chart must separated by symbol ||<br/>
+|| ...so on</pre>]]>
+				 </html>
 		</groupbox>
 	</div>
 </zk>
