@@ -13,11 +13,15 @@
 					style="font-family: verdana; border: none; background-color: white;">
 				</label>
 			</toolbar>
-			<textbox rows="8" multiline="true" width="99.5%" height="120px"
-				readonly="true"
-				style="font-family: verdana; border: none; background-color: white;"
-				value="${c:l('message.password_instructions')} ">
-			</textbox>
+			<html sclass="z-label" style="color:#555">
+<![CDATA[<pre>* The password cannot consist of any three sequence letters  are in your Username.
+  For e.g.If your Username is 'Bobby', then your password cannot be 'Bob'.
+* Password should mandatorily contain small letters ,Capital letters,special characters(Atleast one from !@#$%^&*_-) and numbers .
+  For e.g. asAS12!@
+* Spaces are not allowed in between Password.
+* The Password should contain a minimum of 8 characters  and maximum of 15 characters .
+* Your new password cannot be same as any of your previous 5 passwords.</pre> ]]>
+			</html>
 		</panelchildren>
 	</panel>
 
